# lossless-checker

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  dsd-detection-design.md
.github/workflows/: release.yml
docs/: calibration.md
src/: decode.rs  i18n.rs  main.rs  report.rs  spectrum.rs  verdict.rs
src/dsd/: dff.rs  dsf.rs  export.rs  judge.rs  metrics.rs  mod.rs  run.rs  unpack.rs  welch.rs
