[package]
name = "lossless-checker"
version = "0.2.0"
edition = "2021"

[dependencies]
# 纯 Rust 音频解码，支持 FLAC / ALAC / WAV / MP3 等，无需系统依赖
symphonia = { version = "0.5", features = ["all"] }
# FFT 计算 (realfft wraps rustfft; ~2x faster for real-valued input)
realfft = "3.4"
# 命令行参数解析
clap = { version = "4.5", features = ["derive"] }
# 多核并行，扫大库才快
rayon = "1"
# JSON 报告（路径含中文/引号也能正确转义）
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# release 下开优化，扫大库才快
[profile.release]
opt-level = 3
